# Reconciliation_Rust

./: .env  .gitignore  AGENTS.md  Cargo.toml  MEMORY.md  README.md
crates/recon-cli/: Cargo.toml
crates/recon-cli/src/: main.rs
crates/recon-core/: Cargo.toml
crates/recon-core/src/: config.rs  engine.rs  error.rs  lib.rs  normalize.rs  reader.rs  schema.rs  storage.rs
crates/recon-orch/: Cargo.toml
crates/recon-orch/src/: daemon.rs  dconfig.rs  detector.rs  lib.rs  main.rs  notifier.rs  pipeline.rs
crates/recon-report/: Cargo.toml
crates/recon-report/src/: assets.rs  index.rs  lib.rs  manifest.rs  report.rs  table.rs
crates/recon-schema/: Cargo.toml
crates/recon-schema/src/: lib.rs
crates/recon-web/: Cargo.toml  build.rs
crates/recon-web/src/: assets.rs  main.rs
migrations/: 0001_fixed_width_reconciliation.sql  0002_move_file_metadata_to_comparison_runs.sql  0003_source_metadata_uses_timestamps.sql  0004_add_unlogged_copy_staging_tables.sql  0005_add_comparison_run_name.sql  0006_add_per_run_source_table_index.sql  0007_add_comparison_processing_duration.sql
reports/: 2026-07-15_092237_18c26c307e28fcb8.parquet  2026-07-15_092341_18c26c3f5b9daab7.parquet  2026-07-15_092603_18c26c605a580af1.html  2026-07-15_092905_18c26c8abedbb7d2.html  2026-07-15_092905_18c26c8abedbb7d2.parquet  2026-07-15_092905_18c26c8aca5ea737.html  2026-07-15_095112_18c26dbfaffd4186.html  2026-07-15_095112_18c26dbfaffd4186.parquet  2026-07-15_103537_18c2702c184acd45.html  2026-07-15_103537_18c2702c184acd45.parquet  2026-07-15_104452_18c270ad749b6785.html  2026-07-15_104452_18c270ad749b6785.parquet  2026-07-15_104739_18c270d442fad6a3.html  2026-07-15_104739_18c270d442fad6a3.parquet  2026-07-15_115621_18c27493f1f75681.html  index.html  manifest.json
run-configs/: Test.yml  Test_1.yml  Test_2.yml  Test_3.yml
schemas/Data_trial/: v1.yml
schemas/Editable/: v1.yml
schemas/New_layout/: v1.yml
schemas/Transactions_d_schema/: v1.yml
schemas/new/: v1.yml
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: Banner.tsx  ui.tsx
web/src/pages/: BuildRun.tsx  RunsList.tsx  SchemaForm.tsx  SchemaList.tsx  SchemaView.tsx
