[workspace]
resolver = "3"
members = [
    "crates/recon-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Serde / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"
thiserror = "2"

# Web
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
rust-embed = { version = "8", features = ["mime-guess"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate"] }
dotenvy = "0.15"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"

# DataFrame engine. `new_streaming` (polars-stream) is REQUIRED: sinks only run
# with bounded memory on the streaming engine, and the 1M–100M rows/source
# target depends on `sink_parquet` streaming the full diff instead of
# collecting it. Without the feature, sink execution falls back to the
# in-memory engine and materializes the whole result. This pulls in the
# heavier polars-stream dependency tree; that is the accepted cost.
polars = { version = "0.51", default-features = false, features = [
    "lazy",
    "parquet",
    "strings",
    "coalesce",
    "semi_anti_join",
    "fmt",
    "new_streaming",
] }

# Time
jiff = { version = "0.2", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "time", "process"] }

# Dev/test
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
