[package]
name = "recon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "recon"
path = "src/main.rs"

[dependencies]
recon-core.workspace = true
recon-schema.workspace = true
recon-report.workspace = true
recon-orch.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
jiff.workspace = true

[dev-dependencies]
tempfile = "3"
