[package]
name = "recon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde.workspace = true
serde_norway.workspace = true
thiserror.workspace = true
polars.workspace = true
jiff.workspace = true
tempfile.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
