[package]
name = "recon-report"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
recon-core.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
maud.workspace = true
polars.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["yaml", "json"] }
tempfile = "3"
