[package]
name = "recon-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
recon-core.workspace = true
serde.workspace = true
serde_norway.workspace = true
jiff.workspace = true

[dev-dependencies]
tempfile = "3"
