[package]
name = "recon-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "recon-web"
path = "src/main.rs"

[dependencies]
recon-core.workspace = true
recon-schema.workspace = true
recon-report.workspace = true
recon-orch.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_norway.workspace = true
